--- a/04_ApplicationDetails.html
+++ b/04_ApplicationDetails.html
@@ -3,125 +3,49 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./ApplicationDetails.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Sansation:wght@700&display=swap"
-    />
-  </head>
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sansation:wght@700&display=swap"/>
+    <title>Application Details</title>
+  
+</head>
   <body>
-    <div class="application-details">
-      <div class="application-details-child"></div>
-      <div class="logo6">
-        <img class="logo-child3" alt="" src="./public/ellipse-142.svg" /><img
-          class="sugar-cube-icon6"
-          alt=""
-          src="./public/sugar-cube2@2x.png"
-        />
-      </div>
-      <b class="loan-application2">Loan Application</b>
-      <div class="header1">
-        <div class="header-item"></div>
-        <b class="home4">Home</b><b class="about-sme-fund4">About SME Fund</b
-        ><b class="application4">Application</b
-        ><b class="how-it-works6">How it Works</b><b class="faqs1">FAQS</b>
-      </div>
-      <b class="hello-millie-start">Hello Millie, start your application</b>
-      <div class="choose-your-preferred1">
-        Choose your preferred loan package
-      </div>
-      <div class="small-business-loan">
-        <div class="small-business-loan-child"></div>
-        <img
-          class="small-business-loan-item"
-          alt=""
-          src="./public/rectangle-2648.svg"
-        /><button class="button10" autofocus>
-          <b class="content-text10">Apply</b
-          ><img
-            class="icon-start8"
-            alt=""
-            src="./public/icon-start8.svg"
-          /></button
-        ><b class="small-business-loan1">Small Business Loan</b>
-        <div class="wrapper"><div class="div3">10,000 - 100,000</div></div>
-        <div class="offered-to-small">
-          offered to small businesses to finance their operations, purchase
-          inventory, or expand their business.
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">
+          <img src="images/SMEFund logo.png" style="width: 100px; object-fit: scale-down;" alt="">
         </div>
-        <div class="with-less-than">with less than 50 employees</div>
-        <div class="repayment-period-of">
-          repayment period of up to 5 years.
+        <div class="nav-links">
+          <ul>
+            <li class="nav-item">
+              <a href="01_index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="">About SME Fund</a>
+            </li>
+            <li class="nav-item">
+              <a href="04_ApplicationDetails.html">Application</a>
+            </li>
+            <li class="nav-item">
+              <a href="">How it Works</a>
+            </li>
+            <li class="nav-item">
+              <a href="">Contact Us</a>
+            </li>
+          </ul>
         </div>
-        <div class="interest-rate">5% interest rate</div>
-        <img class="list-sbl-icon" alt="" src="./public/list-sbl.svg" />
+      
       </div>
-      <div class="startup-loan">
-        <div class="startup-loan-child"></div>
-        <img
-          class="startup-loan-item"
-          alt=""
-          src="./public/rectangle-2650.svg"
-        /><button class="button11">
-          <b class="content-text10">Apply</b
-          ><img class="icon-start8" alt="" src="./public/icon-start9.svg" />
-        </button>
-        <div class="container"><div class="div4">100,000 - 500,000</div></div>
-        <b class="startup-loan1">Startup Loan</b>
-        <div class="offered-to-startups">
-          offered to startups that are less than 2 years old to finance their
-          initial operations, product development, or marketing efforts.
-        </div>
-        <div class="with-less-than1">with less than 50 employees</div>
-        <div class="repayment-period-of1">
-          repayment period of up to 3 years.
-        </div>
-        <div class="interest-rate1">8 % interest rate</div>
-        <img class="list-startup-icon" alt="" src="./public/list-startup.svg" />
-      </div>
-      <div class="equipment-financing">
-        <div class="small-business-loan-child"></div>
-        <button class="button12">
-          <b class="content-text10">Apply</b
-          ><img
-            class="icon-start8"
-            alt=""
-            src="./public/icon-start10.svg"
-          /></button
-        ><img
-          class="small-business-loan-item"
-          alt=""
-          src="./public/rectangle-2649.svg"
-        /><b class="equipment-financing1">Equipment Financing</b>
-        <div class="frame"><div class="div5">100,000 - 500,000</div></div>
-        <div class="offered-to-businesses">
-          offered to businesses to purchase or lease equipment, such as
-          machinery, vehicles, or computers.
-        </div>
-        <div class="equipment-is-used">Equipment is used as collateral</div>
-        <div class="repayment-period-of2">
-          repayment period of up to 5 years.
-        </div>
-        <div class="interest-rate2">5% interest rate</div>
-        <img
-          class="list-equipment-icon"
-          alt=""
-          src="./public/list-equipment.svg"
-        />
-      </div>
-      <div class="kindly-complete-this-container">
-        <p class="kindly-complete-this">
-          Kindly complete this form, by filling in the details, ensure you go
-          through all the steps
-        </p>
+    </nav>
+
+      <div>
+        <p class="text-center">
+          Kindly complete this form, by filling in the details, ensure you gothrough all the steps</p>
       </div>
       <div class="personal-information-form">
-        <div class="personal-information-form-child"></div>
+        <div class="personal-information-form-child">
         <b class="personal-information">Personal information</b
         ><button class="button13">
           <b class="content-text10">Save</b
@@ -241,19 +165,15 @@
           </div>
         </div>
       </div>
-      <img
-        class="application-details-item"
-        alt=""
-        src="./public/rectangle-2642@2x.png"
-      /><b class="continue-the-application">Continue the application below</b>
-      <div class="kindly-complete-this-container1">
-        <p class="kindly-complete-this">
-          Kindly complete this form, by filling in the details, ensure you go
-          through all the steps
-        </p>
+      </div>
+  
+      <div class="application-details-item">
+      <h3>Continue the application below</h3>
+        <p>Kindly complete this form, by filling in the details, ensure you go
+          through all the steps</p>
       </div>
       <div class="business-information-form">
-        <div class="business-information-form-child"></div>
+        <div class="business-information-form-child">
         <b class="business-information">Business information</b
         ><b class="operating-since">Operating since:</b
         ><b class="till-date">Till date:</b
@@ -392,26 +312,15 @@
           <b class="content-hint23">You can enter up to 200 characters</b>
         </div>
       </div>
+      </div>
       <div class="loan-details-form">
-        <div class="loan-details-form-child"></div>
+        <div class="loan-details-form-child">
         <b class="loan-details">Loan Details</b>
         <div class="kindly-complete-this-container2">
           <p class="kindly-complete-this">
             Kindly complete this form, by filling in the details, ensure you go
             through all the steps
           </p>
-        </div>
-        <div class="button16">
-          <b class="content-text16">Save</b
-          ><img class="icon-start8" alt="" src="./public/icon-start14.svg" />
-        </div>
-        <div class="button17">
-          <b class="content-text16">Upload Documents</b
-          ><img class="icon-start8" alt="" src="./public/icon-start15.svg" />
-        </div>
-        <div class="button18">
-          <b class="content-text16">Previous</b
-          ><img class="icon-start8" alt="" src="./public/icon-start16.svg" />
         </div>
         <div class="textarea14">
           <div class="group-form">
@@ -540,51 +449,22 @@
           authorize the lender to verify the information and to obtain credit
           reports in connection with this application.
         </div>
-      </div>
-      <div class="application-details-inner"></div>
-      <div class="info">
-        <b class="sme-fund-kenya8">SME Fund Kenya</b>
-        <div class="sme-fund-kenya9">
-          SME Fund Kenya is a financial institution that offers affordable and
-          flexible financing options to individuals and self-help groups in
-          Kenya. Our loan website provides a convenient and efficient platform
-          for individuals and self-help groups to apply for loans online.
+        <div class="button16">
+          <b class="content-text16">Save</b
+          ><img class="icon-start8" alt="" src="./public/icon-start14.svg" />
         </div>
-        <div class="logo7" id="logoContainer1">
-          <img class="logo-child4" alt="" src="./public/ellipse-14.svg" /><img
-            class="sugar-cube-icon7"
-            alt=""
-            src="./public/sugar-cube@2x.png"
-          />
+        <div class="button17">
+          <a href="05_UploadSoloDocs.html"><b class="content-text16">Upload Documents</b
+          ><img class="icon-start8" alt="" src="./public/icon-start15.svg" /></a>
+        </div>
+        <div class="button18">
+          <b class="content-text16">Previous</b
+          ><img class="icon-start8" alt="" src="./public/icon-start16.svg" />
         </div>
       </div>
-      <div class="quick-links4">
-        <b class="quick-links5">Quick Links</b>
-        <div class="home5">Home</div>
-        <div class="about-sme-fund5">About SME Fund Ke</div>
-        <div class="how-it-works7">How it Works</div>
-        <div class="application5">Application</div>
       </div>
-      <div class="contact-us3">
-        <b class="contact-us4">Contact Us</b>
-        <div class="div6">
-          <p class="kindly-complete-this">020 2646327</p>
-          <p class="kindly-complete-this">+254 723 522841</p>
-          <p class="kindly-complete-this">&nbsp;</p>
-          <p class="kindly-complete-this">&nbsp;</p>
-        </div>
-        <div class="infosmefundgoke3">info@smefund.go.ke</div>
-      </div>
-      <div class="copyright-20163">Copyright © 2016 All Rights Reserved.</div>
-    </div>
-
-    <script>
-      var logoContainer1 = document.getElementById("logoContainer1");
-      if (logoContainer1) {
-        logoContainer1.addEventListener("click", function (e) {
-          window.location.href = "/";
-        });
-      }
-      </script>
+    
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+
 </html>
