--- a/07_Congrats.html
+++ b/07_Congrats.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./ApplicationDetails.css" />
     <link rel="stylesheet" href="./Congrats.css" />
     <link
       rel="stylesheet"
@@ -15,6 +16,34 @@
     />
   </head>
   <body>
+
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">
+          <img src="images/SMEFund logo.png" style="width: 100px; object-fit: scale-down;" alt="">
+        </div>
+        <div class="nav-links">
+          <ul>
+            <li class="nav-item">
+              <a href="01_index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="">About SME Fund</a>
+            </li>
+            <li class="nav-item">
+              <a href="04_ApplicationDetails.html">Application</a>
+            </li>
+            <li class="nav-item">
+              <a href="">How it Works</a>
+            </li>
+            <li class="nav-item">
+              <a href="">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      
+      </div>
+    </nav>
     <div class="congrats">
       <div class="congrats-child"></div>
       <b class="your-application-is">Your application is complete!</b>
@@ -27,15 +56,8 @@
         <b class="content-text6">Back to homepage</b
         ><img class="icon-start4" alt="" src="./public/icon-start4.svg" />
       </button>
-      <div class="congrats-item"></div>
-      <b class="loan-application">Loan application</b>
-      <div class="logo2">
-        <img class="logo-inner" alt="" src="./public/ellipse-142.svg" /><img
-          class="sugar-cube-icon2"
-          alt=""
-          src="./public/sugar-cube2@2x.png"
-        />
-      </div>
+    
+
       <img class="image-8-icon" alt="" src="./public/image-8@2x.png" />
       <div class="congrats-inner"></div>
       <b class="contact-us1">Contact Us</b
