--- a/05_packages.html
+++ b/05_packages.html
@@ -21,12 +21,12 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a href="">About SME Fund</a>
+						<a href="">Packages</a>
 					</li>
 					<li class="nav-item">
 						<a href="04_ApplicationDetails.html">Application</a>
 					</li>
-					<li class="nav-item">
+					<li class="index.html">
 						<a href="">How it Works</a>
 					</li>
 					<li class="nav-item">
