--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="">About SME Fund</a>
+                                    <a href="05_packages.html">Packages</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="04_ApplicationDetails.html">Application</a>
@@ -58,7 +58,7 @@
                             </div>
                             <div class="view-application-process">To view application process and requirements please scroll down</div>
 
-                            <a href="02_LoginPage.php"></a><button class="button" autofocus id="button">
+                            <a href="02_LoginPage.html"></a><button class="button" autofocus id="button">
                                 <b class="content-text">Proceed to Application</b><img class="icon-start" alt="" src="./public/icon-start.svg"/>
                             </button>
                         </div>
@@ -123,7 +123,7 @@
 
                     <div class="individual-empowerment col-sm-6">
                         <div class="card">
-                            <img class="individual-empowerment-image" alt="" src="./public/rectangle-2636@2x.png"/>
+                            <img class="individual-empowerment-image" alt="" style="width: 100%; object-fit: cover;" src="./public/rectangle-2636@2x.png"/>
                             <div class="card-body">
                                 <h5>Individual empowerment</h5>
                                 <p class="individual-empowerment1">
@@ -244,16 +244,16 @@
                 <div class="gallery-container mt-5">
                     <div class="gallery">
                         <div class="gallery-item">
-                            <img src="Chama1.jpg" alt="Image 1">
+                            <img src="images\Chama1.jpg" alt="Image 1">
                         </div>
                         <div class="gallery-item">
-                            <img src="chama2.png" alt="Image 2">
+                            <img src="images\chama2.png" alt="Image 2">
                         </div>
                         <div class="gallery-item">
-                            <img src="Chama3.jpg" alt="Image 3">
+                            <img src="images\Chama3.jpg" alt="Image 3">
                         </div>
                         <div class="gallery-item">
-                            <img src="chama4.jpg" alt="Image 4">
+                            <img src="images\chama4.jpg" alt="Image 4">
                         </div>
                     </div>
                 </div>
@@ -330,7 +330,7 @@
                     <div class="col-md-6">
                       <div class="testimonial">
                         <div class="testimonial-image">
-                          <img src="man1.jpg" alt="Person 1">
+                          <img src="images\man1.jpg" alt="Person 1">
                         </div>
                         <div class="testimonial-content">
                           <h3>John</h3>
@@ -341,7 +341,7 @@
                     <div class="col-md-6">
                       <div class="testimonial">
                         <div class="testimonial-image">
-                          <img src="woman2.jpg" alt="Person 2">
+                          <img src="C:\xampp\htdocs\SMEFund project\Smefund-Project\images\woman2.jpg" alt="Person 2">
                         </div>
                         <div class="testimonial-content">
                           <h3>Grace</h3>
@@ -369,7 +369,7 @@
         <h4>Quick Links</h4>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">About us</a></li>
+          <li><a href="#">Packages</a></li>
           <li><a href="04_ApplicationDetails.html">Application</a></li>
           <li><a href="#">Contact us</a></li>
         </ul>
